laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: xspl/exptlaravel-app:latest  # Minikube me available image use ho rahi hai
          imagePullPolicy: Never  # ✅ Minikube ke local image ko use karega
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: laravel-code
              mountPath: /var/www
      volumes:
        - name: laravel-code
          persistentVolumeClaim:
            claimName: laravel-pvc  # ✅ PV aur PVC ka use karenge

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: NodePort
